--- a/Docker - Angular/Dockerfile
+++ b/Docker - Angular/Dockerfile
@@ -1,11 +1,13 @@
-FROM node:9.2.0-alpine
+# These are the suite code names for releases of Debian
+FROM node:10.13-alpine as node-angular-cli
 
+# Linux setup
 RUN apk update \
-  && apk add --update alpine-sdk python \
-  && yarn global add @angular/cli@1.5.5 \
-  && ng set --global packageManager=yarn \
-  && apk del alpine-sdk python \
+  && apk add --update alpine-sdk \
+  && apk del alpine-sdk \
   && rm -rf /tmp/* /var/cache/apk/* *.tar.gz ~/.npm \
-  && npm cache clean --force \
-  && yarn cache clean \
+  && npm cache verify \
   && sed -i -e "s/bin\/ash/bin\/sh/" /etc/passwd
+
+# Angular CLI
+RUN npm install -g @angular/cli
